# crosswebtemplate

./: .gitignore  dump.ps1  index.html  package.json  vite.config.js
desktop/: CMakeLists.txt
desktop/docker/: linux-build.Dockerfile
desktop/resources/windows/: resources.rc
desktop/src/: app.rc  main.cpp
middle-end/: core.zig
mobile/: settings.gradle
mobile/app/src/main/java/com/cwt/: MainActivity.java
scripts/: _utils.js  build-linux.js  build-web-debug.js  build-web-release.js  build-web.js  build-windows-debug.js  build-windows-release.js  build-windows.js  clean.js  export-linux.js  export-web.js  export-windows.js  serve-web.js
src/: App.jsx  bridge.js  main.jsx  middle-end.js  styles.css
src/middle-end/: bridge.js  bridge.zig  core.js  core.zig
webview_patch/: api.h  engine_base.hh
